[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = []
description = "A wrapper library around OpenTofu (and Terraform)"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "tofupy"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort"
]

[tool.coverage.run]
omit = [
  "./tofupy/_version.py",
  "./tofupy/__init__.py",
  "./examples/*"
]

[tool.ruff]
exclude = [".venv", "./tofupy/_version.py"]
line-length = 88

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
tofupy = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "tofupy/_version.py"
