[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = [
  "typer"
]
description = "An example of TofuPy used in a security scanner."
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "tofupy-security-example"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"

[tool.ruff]
exclude = [".venv"]
line-length = 88

[tool.setuptools.packages]
find = {}
